# dev-datatools

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  SECURITY.md  contributors.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
doc/source/dev/: development_workflow.rst
scripts/: install_poetry.sh
src/: __init__.py
src/datatools/: columns_rename.py
src/datatools/core/: dtype_cast.py
tests/: __init__.py
